@@ -59,7 +59,7 @@
         <dependency>
             <groupId>org.apache.mina</groupId>
             <artifactId>mina-core</artifactId>
-            <version>2.0.16</version>
+            <version>2.0.19</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -125,6 +125,12 @@
                 <directory>../quickfixj-messages/quickfixj-messages-fixt11/src/main/resources</directory>
             </resource>
             <resource>
+                <directory>../quickfixj-messages/quickfixj-messages-fix50sp2/src/main/resources</directory>
+            </resource>
+            <resource>
+                <directory>../quickfixj-messages/quickfixj-messages-fix50sp1/src/main/resources</directory>
+            </resource>
+            <resource>
                 <directory>../quickfixj-messages/quickfixj-messages-fix50/src/main/resources</directory>
             </resource>
             <resource>
@@ -141,12 +147,6 @@
             </resource>
             <resource>
                 <directory>../quickfixj-messages/quickfixj-messages-fix40/src/main/resources</directory>
-            </resource>
-            <resource>
-                <directory>../quickfixj-messages/quickfixj-messages-fix50sp1/src/main/resources</directory>
-            </resource>
-            <resource>
-                <directory>../quickfixj-messages/quickfixj-messages-fix50sp2/src/main/resources</directory>
             </resource>
         </resources>
 
@@ -205,7 +205,31 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>fix50</id>
+                        <id>fix50sp2</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <dictFile>../quickfixj-messages/quickfixj-messages-fix50sp2/src/main/resources/FIX50SP2.modified.xml</dictFile>
+                            <packaging>quickfix.fix50sp2</packaging>
+                            <fieldPackage>quickfix.field</fieldPackage>
+                            <decimal>${generator.decimal}</decimal>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>fix50sp1</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <dictFile>../quickfixj-messages/quickfixj-messages-fix50sp1/src/main/resources/FIX50SP1.modified.xml</dictFile>
+                            <packaging>quickfix.fix50sp1</packaging>
+                            <fieldPackage>quickfix.field</fieldPackage>
+                            <decimal>${generator.decimal}</decimal>
+                        </configuration>
+                    </execution>
+					<execution>
+						<id>fix50</id>
                         <goals>
                             <goal>generate</goal>
                         </goals>
@@ -272,30 +296,6 @@
                         <configuration>
                             <dictFile>../quickfixj-messages/quickfixj-messages-fix40/src/main/resources/FIX40.xml</dictFile>
                             <packaging>quickfix.fix40</packaging>
-                            <fieldPackage>quickfix.field</fieldPackage>
-                            <decimal>${generator.decimal}</decimal>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>fix50sp1</id>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <dictFile>../quickfixj-messages/quickfixj-messages-fix50sp1/src/main/resources/FIX50SP1.modified.xml</dictFile>
-                            <packaging>quickfix.fix50sp1</packaging>
-                            <fieldPackage>quickfix.field</fieldPackage>
-                            <decimal>${generator.decimal}</decimal>
-                        </configuration>
-                    </execution>
-                    <execution>
-                        <id>fix50sp2</id>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <dictFile>../quickfixj-messages/quickfixj-messages-fix50sp2/src/main/resources/FIX50SP2.modified.xml</dictFile>
-                            <packaging>quickfix.fix50sp2</packaging>
                             <fieldPackage>quickfix.field</fieldPackage>
                             <decimal>${generator.decimal}</decimal>
                         </configuration>
@@ -383,7 +383,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Xmx512m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true</argLine>
+                    <argLine>-Xmx512m -Djava.net.preferIPv4Stack=true</argLine>
+                    <trimStackTrace>false</trimStackTrace>
                     <includes>
                         <include>**/*Test.java</include>
                         <include>${acceptance.tests}</include>
